// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text resizer does not render if textSize is null 1`] = `
.c5 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c2 {
  display: contents;
}

.c3 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 45px;
}

.c3:hover,
.c3:focus {
  color: #424242;
}

.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  width: 100%;
  overflow: visible;
  padding-left: 5rem;
  display: block;
  z-index: 30;
}

.c6 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

.c4 {
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 3.2rem;
  border-radius: 0;
  margin: 0;
  -webkit-transition: none;
  transition: none;
  background: transparent;
  color: #5e6062;
  display: none;
}

.c11 > svg {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  vertical-align: middle;
}

.c12 {
  height: 3.2rem;
  border-radius: 0;
  margin: 0;
  -webkit-transition: none;
  transition: none;
  background: transparent;
  color: #5e6062;
}

.c12 > svg {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  vertical-align: middle;
}

.c8 {
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #5e6062;
  border: solid 0.1rem;
  border-radius: 0.2rem;
  width: 38rem;
}

.c8:last-child {
  margin-right: auto;
}

.c8:focus-within {
  border: solid 0.1rem #0dc0dc;
  box-shadow: 0 0 4px 0 rgba(13,192,220,0.5);
}

.c8.focus-within {
  border: solid 0.1rem #0dc0dc;
  box-shadow: 0 0 4px 0 rgba(13,192,220,0.5);
}

.c9 {
  color: #424242;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  font-size: 1.6rem;
  margin: 0 1rem 0 1rem;
  height: 3.2rem;
  border: none;
  outline: none;
  width: 100%;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c9::-webkit-search-decoration,
.c9::-webkit-search-cancel-button,
.c9::-webkit-search-results-button,
.c9::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: none;
}

.c9::-webkit-input-placeholder {
  color: #6f6f6f;
}

.c9::-moz-placeholder {
  color: #6f6f6f;
}

.c9:-ms-input-placeholder {
  color: #6f6f6f;
}

.c9::placeholder {
  color: #6f6f6f;
}

.c18 {
  color: #424242;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  font-size: 1.6rem;
  margin: 0 1rem 0 1rem;
  height: 3.2rem;
  border: none;
  outline: none;
  width: 100%;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c18::-webkit-search-decoration,
.c18::-webkit-search-cancel-button,
.c18::-webkit-search-results-button,
.c18::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: none;
}

.c18::-webkit-input-placeholder {
  color: #6f6f6f;
}

.c18::-moz-placeholder {
  color: #6f6f6f;
}

.c18:-ms-input-placeholder {
  color: #6f6f6f;
}

.c18::placeholder {
  color: #6f6f6f;
}

.c1 {
  height: 5rem;
  max-width: 128rem;
  margin: 0 auto;
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  background-color: #fff;
  -webkit-transition: padding-left 300ms;
  transition: padding-left 300ms;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
}

.c15 {
  max-width: 128rem;
  margin: 0 auto;
  width: calc(100% - 3.2rem * 2);
  overflow: visible;
  margin-top: 1rem;
  margin-bottom: 1rem;
  height: 3.2rem;
}

.c13 {
  display: none;
  overflow: visible;
  height: 5.3rem;
  background-color: #fff;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
}

.c14 {
  border: none;
  border-top: 0.1rem solid #efeff1;
  display: none;
  margin: 0;
}

.c17 {
  white-space: nowrap;
  margin-right: 1rem;
  text-align: left;
}

.c16 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 45px;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  min-width: auto;
  display: none;
}

.c16:hover,
.c16:focus {
  color: #424242;
}

.c16:hover,
.c16:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

@media screen and (max-width:75em) {
  .c0 {
    top: 6rem;
  }
}

@media screen and (max-width:50em) {
  .c0 {
    z-index: 51;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:50em) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:75em) {
  .c11 {
    display: block;
    height: 100%;
  }
}

@media screen and (max-width:50em) {
  .c12 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c8 {
    height: 100%;
    overflow: hidden;
  }
}

@media screen and (max-width:50em) {
  .c8 {
    width: 100%;
  }

  .c8,
  .c8:last-child {
    margin-right: 0;
  }
}

@media screen and (max-width:75em) {
  .fNEgfW .c10 {
    color: #5e6062;
  }
}

@media screen and (max-width:75em) {
  .WUYvv .c10 {
    color: #fff;
  }

  .WUYvv .c10:hover,
  .WUYvv .c10:focus {
    color: #fff;
    -webkit-transition: color 200ms;
    transition: color 200ms;
  }

  .WUYvv .c10:hover::before,
  .WUYvv .c10:focus::before {
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    min-width: 45px;
    background-color: rgba(0,0,0,0.06);
  }
}

@media screen and (max-width:75em) {
  .eLelrJ .c10 {
    color: #000;
  }

  .eLelrJ .c10:hover,
  .eLelrJ .c10:focus {
    color: #000;
    -webkit-transition: color 200ms;
    transition: color 200ms;
  }

  .eLelrJ .c10:hover::before,
  .eLelrJ .c10:focus::before {
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    min-width: 45px;
    background-color: rgba(0,0,0,0.06);
  }
}

@media screen and (max-width:50em) {
  .c9 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    padding-left: 0 !important;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:50em) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 5.3rem;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 0 6px;
    -webkit-transition: none;
    transition: none;
  }

  .c1 .c7 {
    border: none;
    border-radius: 0;
    width: 45px;
  }
}

@media screen and (max-width:50em) {
  .fcMFyh .c7 {
    border: none;
    border-radius: 0;
    width: 45px;
  }
}

@media screen and (max-width:75em) {
  .c15 {
    width: calc(100% - 1.6rem * 2);
  }
}

@media screen and (max-width:75em) {
  .c15 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (max-width:50em) {
  .c15 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:75em) {
  .c13 {
    display: block;
  }
}

@media screen and (max-width:50em) {
  .c13 {
    padding-left: 0;
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c14 {
    display: block;
  }
}

@media screen and (max-width:50em) {
  .c16 {
    display: block;
  }
}

<div
  className="c0"
  data-testid="topbar"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      id="mobile-menu-button"
    >
      <button
        aria-label="Click to open menu"
        className="c3 c4"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c5 c6"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="c7 c8"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search this book"
        className="c9"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        className="c3 c10 c11"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="c3 c10 c12"
        data-experiment={true}
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
  </div>
  <div
    className="c13"
  >
    <hr
      className="c14"
    />
    <div
      className="c15"
    >
      <button
        className="c16"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="c17"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="c7 c8"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search this book"
          className="c18"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="c3 c10 c12"
          data-experiment={true}
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
    </div>
  </div>
</div>
`;

exports[`text resizer opens menu when clicking menu button 1`] = `
.c5 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c16 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c2 {
  display: contents;
}

.c19 {
  cursor: pointer;
}

.c13 > *:not(.c18) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c14 {
  overflow: visible;
  position: relative;
}

.c28 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
}

.c28 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c17 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c17 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 45px;
}

.c3:hover,
.c3:focus {
  color: #424242;
}

.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  width: 100%;
  overflow: visible;
  padding-left: 5rem;
  display: block;
  z-index: 30;
}

.c6 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

.c4 {
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 3.2rem;
  border-radius: 0;
  margin: 0;
  -webkit-transition: none;
  transition: none;
  background: transparent;
  color: #5e6062;
  display: none;
}

.c11 > svg {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  vertical-align: middle;
}

.c12 {
  height: 3.2rem;
  border-radius: 0;
  margin: 0;
  -webkit-transition: none;
  transition: none;
  background: transparent;
  color: #5e6062;
}

.c12 > svg {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  vertical-align: middle;
}

.c8 {
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #5e6062;
  border: solid 0.1rem;
  border-radius: 0.2rem;
  width: 38rem;
}

.c8:last-child {
  margin-right: auto;
}

.c8:focus-within {
  border: solid 0.1rem #0dc0dc;
  box-shadow: 0 0 4px 0 rgba(13,192,220,0.5);
}

.c8.focus-within {
  border: solid 0.1rem #0dc0dc;
  box-shadow: 0 0 4px 0 rgba(13,192,220,0.5);
}

.c9 {
  color: #424242;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  font-size: 1.6rem;
  margin: 0 1rem 0 1rem;
  height: 3.2rem;
  border: none;
  outline: none;
  width: 100%;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c9::-webkit-search-decoration,
.c9::-webkit-search-cancel-button,
.c9::-webkit-search-results-button,
.c9::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: none;
}

.c9::-webkit-input-placeholder {
  color: #6f6f6f;
}

.c9::-moz-placeholder {
  color: #6f6f6f;
}

.c9:-ms-input-placeholder {
  color: #6f6f6f;
}

.c9::placeholder {
  color: #6f6f6f;
}

.c27 {
  color: #424242;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  font-size: 1.6rem;
  margin: 0 1rem 0 1rem;
  height: 3.2rem;
  border: none;
  outline: none;
  width: 100%;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c27::-webkit-search-decoration,
.c27::-webkit-search-cancel-button,
.c27::-webkit-search-results-button,
.c27::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: none;
}

.c27::-webkit-input-placeholder {
  color: #6f6f6f;
}

.c27::-moz-placeholder {
  color: #6f6f6f;
}

.c27:-ms-input-placeholder {
  color: #6f6f6f;
}

.c27::placeholder {
  color: #6f6f6f;
}

.c1 {
  height: 5rem;
  max-width: 128rem;
  margin: 0 auto;
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  background-color: #fff;
  -webkit-transition: padding-left 300ms;
  transition: padding-left 300ms;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
}

.c24 {
  max-width: 128rem;
  margin: 0 auto;
  width: calc(100% - 3.2rem * 2);
  overflow: visible;
  margin-top: 1rem;
  margin-bottom: 1rem;
  height: 3.2rem;
}

.c22 {
  display: none;
  overflow: visible;
  height: 5.3rem;
  background-color: #fff;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
}

.c23 {
  border: none;
  border-top: 0.1rem solid #efeff1;
  display: none;
  margin: 0;
}

.c26 {
  white-space: nowrap;
  margin-right: 1rem;
  text-align: left;
}

.c15 {
  z-index: 3;
}

.c15 > button {
  max-height: 5.2rem;
}

.c15 > button > div {
  padding: 1.4rem;
}

.c20 {
  color: #5e6062;
  text-align: left;
  font-weight: bold;
}

.c20.c20 {
  background: #fff;
  right: 0;
  left: auto;
  top: calc(100% - 1px);
}

.c20 label {
  padding: 1.6rem 1.6rem 0;
  display: block;
}

.c20 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 .controls > button {
  height: 4rem;
  width: 4.8rem;
}

.c20 .controls input {
  -webkit-appearance: none;
  -moz-appearance: none;
  background: #f1f1f1;
  background-image: linear-gradient(#002468,#002468);
  background-size: calc( (0 - -2) * 100 / (3 - -2) * 1% ) 100%;
  background-repeat: no-repeat;
  overflow: visible;
  height: 0.4rem;
  width: 12rem;
  margin: 0.8rem 0.7rem;
  cursor: pointer;
}

.c20 .controls input[type="range"]::-webkit-slider-runnable-track,
.c20 .controls input[type="range"]::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  box-shadow: none;
  border: none;
  height: 0.2rem;
  background: repeating-linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0) 19%, #fff 19%, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 20% );
}

.c20 .controls input[type="range"]::-webkit-slider-runnable-track {
  height: 0.2rem;
  background: repeating-linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0) 19%, #fff 19%, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 20% );
}

.c20 .controls input[type="range"]::-moz-range-thumb {
  background: white;
  height: 1.5rem;
  width: 0.7rem;
  border: 1px solid #5e6062;
  border-radius: 1px;
  box-shadow: 0 2px 1px -1px rgba(0,0,0,0.04), 0 1px 1px 0 rgba(0,0,0,0.14), 0 1px 3px 0 rgba(0,0,0,0.12);
}

.c20 .controls input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: white;
  height: 1.5rem;
  width: 0.7rem;
  border: 1px solid #5e6062;
  border-radius: 1px;
  box-shadow: 0 2px 1px -1px rgba(0,0,0,0.04), 0 1px 1px 0 rgba(0,0,0,0.14), 0 1px 3px 0 rgba(0,0,0,0.12);
  width: 0.8rem;
  margin-top: -6px;
}

.c21 {
  margin: 0.2rem 0.6rem;
}

.c25 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 45px;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  min-width: auto;
  display: none;
}

.c25:hover,
.c25:focus {
  color: #424242;
}

.c25:hover,
.c25:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

@media screen and (max-width:75em) {
  .c28 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c17 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    top: 6rem;
  }
}

@media screen and (max-width:50em) {
  .c0 {
    z-index: 51;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:50em) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:75em) {
  .c11 {
    display: block;
    height: 100%;
  }
}

@media screen and (max-width:50em) {
  .c12 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c8 {
    height: 100%;
    overflow: hidden;
  }
}

@media screen and (max-width:50em) {
  .c8 {
    width: 100%;
  }

  .c8,
  .c8:last-child {
    margin-right: 0;
  }
}

@media screen and (max-width:75em) {
  .fNEgfW .c10 {
    color: #5e6062;
  }
}

@media screen and (max-width:75em) {
  .WUYvv .c10 {
    color: #fff;
  }

  .WUYvv .c10:hover,
  .WUYvv .c10:focus {
    color: #fff;
    -webkit-transition: color 200ms;
    transition: color 200ms;
  }

  .WUYvv .c10:hover::before,
  .WUYvv .c10:focus::before {
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    min-width: 45px;
    background-color: rgba(0,0,0,0.06);
  }
}

@media screen and (max-width:75em) {
  .eLelrJ .c10 {
    color: #000;
  }

  .eLelrJ .c10:hover,
  .eLelrJ .c10:focus {
    color: #000;
    -webkit-transition: color 200ms;
    transition: color 200ms;
  }

  .eLelrJ .c10:hover::before,
  .eLelrJ .c10:focus::before {
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    min-width: 45px;
    background-color: rgba(0,0,0,0.06);
  }
}

@media screen and (max-width:50em) {
  .c9 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    padding-left: 0 !important;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:50em) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 5.3rem;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 0 6px;
    -webkit-transition: none;
    transition: none;
  }

  .c1 .c7 {
    border: none;
    border-radius: 0;
    width: 45px;
  }
}

@media screen and (max-width:50em) {
  .fcMFyh .c7 {
    border: none;
    border-radius: 0;
    width: 45px;
  }
}

@media screen and (max-width:75em) {
  .c24 {
    width: calc(100% - 1.6rem * 2);
  }
}

@media screen and (max-width:75em) {
  .c24 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (max-width:50em) {
  .c24 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:75em) {
  .c22 {
    display: block;
  }
}

@media screen and (max-width:50em) {
  .c22 {
    padding-left: 0;
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c23 {
    display: block;
  }
}

@media screen and (max-width:50em) {
  .c15 {
    margin-left: 0;
    display: block;
  }

  .c15 > button {
    max-height: 4.6rem;
  }

  .c15 > button > div {
    padding: 0.9rem 1.5rem;
  }
}

@media screen and (max-width:50em) {
  .c25 {
    display: block;
  }
}

<div
  className="c0"
  data-testid="topbar"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      id="mobile-menu-button"
    >
      <button
        aria-label="Click to open menu"
        className="c3 c4"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c5 c6"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="c7 c8"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search this book"
        className="c9"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        className="c3 c10 c11"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="c3 c10 c12"
        data-experiment={true}
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
    <div
      className="c13 c14 c15"
    >
      <button
        aria-expanded={true}
        aria-label="Change text size"
        className="c16 c17 c18 c19"
        data-analytics-label="Change text size"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          <img
            alt=""
            aria-hidden="true"
            src="text-size.svg"
          />
        </div>
      </button>
      <div
        className="c20"
      >
        <label
          id="text-resizer-label"
        >
          Text size
        </label>
        <div
          className="controls"
        >
          <button
            aria-label="Decrease text size"
            className="c3 c21"
            data-testid="decrease-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-decrease.svg"
            />
          </button>
          <input
            aria-labelledby="text-resizer-label"
            data-testid="change-text-size"
            max={3}
            min={-2}
            onChange={[Function]}
            step="1"
            type="range"
            value={0}
          />
          <button
            aria-label="Increase text size"
            className="c3 c21"
            data-testid="increase-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-increase.svg"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c22"
  >
    <hr
      className="c23"
    />
    <div
      className="c24"
    >
      <button
        className="c25"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="c26"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="c7 c8"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search this book"
          className="c27"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="c3 c10 c12"
          data-experiment={true}
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
      <div
        className="c13 c14 c15"
      >
        <button
          aria-expanded={false}
          aria-label="Change text size"
          className="c16 c28 c18 c19"
          data-analytics-label="Change text size"
          onClick={[Function]}
        >
          <div
            tabIndex={-1}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size.svg"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
